--- a/previous/index.html
+++ b/previous/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang=ja>
 <head>
-  <meta http-equiv="refresh" content="5; url=..">
+  <meta charset=utf-8>
   <title>Redirect URL...</title>
 </head>
 <body>
-  <h1>現在、こちらのページは開発中です... 5秒後にホームへリダイレクトします...もしリダイレクトしなければ<a href=..>こちら</a>をお試しください</h1>
+  <h1>以前のプログラム。</h1>
+  <h2><a href=v1.0.28.html>V1.0.28</a></h2>
+  <p>内容はほぼv1.0.41と同じ。隠し機能が少ないだけ。</p>
+  <br>
+  <br>
   <p><a href=latest/index.html>最新版</a></p>
   <p><a href=..>ホーム</a></p>
 </body>
