Update content for version 1.0.37 in index.html

--- a/previous/index.html
+++ b/previous/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
   <h1>以前のプログラム。</h1>
+  <h2><a href=v1.0.37.html>V1.0.37</a></h2>
+  <p>隠し機能追加。デバッグなどの効率化。</p>
+  <br>
   <h2><a href=v1.0.28.html>V1.0.28</a></h2>
-  <p>内容はほぼv1.0.41と同じ。隠し機能が少ないだけ。</p>
+  <p>内容はほぼv1.0.37と同じ。隠し機能が少ないだけ。</p>
   <br>
   <br>
   <p><a href=latest/index.html>最新版</a></p>
