Change title from 'Redirect URL...' to 'Select Home'

--- a/previous/index.html
+++ b/previous/index.html
@@ -2,7 +2,7 @@
 <html lang=ja>
 <head>
   <meta charset=utf-8>
-  <title>Redirect URL...</title>
+  <title>Select Home</title>
 </head>
 <body>
   <h1>以前のプログラム。</h1>
