Update index.html with latest version details
Added links and information for the latest version.

--- a/previous/index.html
+++ b/previous/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <h1>以前のプログラム。</h1>
+  <br>
+  <h2><a href=latest/index.html>V1.0.43</a></h2>
+  <p>現在最新版。プログラムの見直しなどしてます。</p>
+  <br>
   <h2><a href=v1.0.37.html>V1.0.37</a></h2>
   <p>隠し機能追加。デバッグなどの効率化。</p>
   <br>
