Update link to latest version in index.html

--- a/previous/index.html
+++ b/previous/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>以前のプログラム。</h1>
   <br>
-  <h2><a href=latest/index.html>V1.0.43</a></h2>
+  <h2><a href=/latest/index.html>V1.0.43</a></h2>
   <p>現在最新版。プログラムの見直しなどしてます。</p>
   <br>
   <h2><a href=v1.0.37.html>V1.0.37</a></h2>
