Change links to headings in index.html

--- a/previous/index.html
+++ b/previous/index.html
@@ -17,7 +17,7 @@
   <p>内容はほぼv1.0.37と同じ。隠し機能が少ないだけ。</p>
   <br>
   <br>
-  <p><a href=latest/index.html>最新版</a></p>
-  <p><a href=..>ホーム</a></p>
+  <h3><a href=latest/index.html>最新版</a></h3>
+  <h3><a href=..>ホーム</a></h3>
 </body>
 </html>
