Refactor CSS styles for consistency

--- a/latest/index.html
+++ b/latest/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset=utf-8>
 <style>
-.all { width: 100%; margin-top:0px; font-size:1.3em}
-#o {font-size:5.2em}
-#c {font-size:2.6em; margin-top:20px}
-p {font-size:1.9em; margin-top:0px}
-#t {font-size:1.3em; margin-top:0px}
+.all { width: 100%; margin-top:0px; font-size:1.3em; }
+#o {font-size:5.2em; }
+#c {font-size:2.6em; margin-top:20px; }
+p {font-size:1.9em; margin-top:0px; }
+#t {font-size:1.3em; margin-top:0px; }
 </style>
 </head>
 <body>
